sdk/dataprotection/arm-dataprotection/samples/v1/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                                                   | **Description**                                                                                                                                                                                                                                                                                                                                                                                       |
| ----------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [backupInstancesAdhocBackupSample.ts][backupinstancesadhocbackupsample]                                                                         | Trigger adhoc backup x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/TriggerBackup.json                                                                                                                                                                                                                |
| [backupInstancesCreateOrUpdateSample.ts][backupinstancescreateorupdatesample]                                                                   | Create or update a backup instance in a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/PutBackupInstance.json                                                                                                                                                                            |
| [backupInstancesDeleteSample.ts][backupinstancesdeletesample]                                                                                   | Delete a backup instance in a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/DeleteBackupInstance.json                                                                                                                                                                                   |
| [backupInstancesGetBackupInstanceOperationResultSample.ts][backupinstancesgetbackupinstanceoperationresultsample]                               | Get result of backup instance creation operation x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/GetBackupInstanceOperationResult.json                                                                                                                                                                 |
| [backupInstancesGetSample.ts][backupinstancesgetsample]                                                                                         | Gets a backup instance with name in a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/GetBackupInstance.json                                                                                                                                                                              |
| [backupInstancesListSample.ts][backupinstanceslistsample]                                                                                       | Gets a backup instances belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ListBackupInstances.json                                                                                                                                                                           |
| [backupInstancesResumeBackupsSample.ts][backupinstancesresumebackupssample]                                                                     | This operation will resume backups for backup instance x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ResumeBackups.json                                                                                                                                                                              |
| [backupInstancesResumeProtectionSample.ts][backupinstancesresumeprotectionsample]                                                               | This operation will resume protection for a stopped backup instance x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ResumeProtection.json                                                                                                                                                              |
| [backupInstancesStopProtectionSample.ts][backupinstancesstopprotectionsample]                                                                   | This operation will stop protection of a backup instance and data will be held forever x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/StopProtection.json                                                                                                                                             |
| [backupInstancesSuspendBackupsSample.ts][backupinstancessuspendbackupssample]                                                                   | This operation will stop backup for a backup instance and retains the backup data as per the policy (except latest Recovery point, which will be retained forever) x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/SuspendBackups.json                                                                 |
| [backupInstancesSyncBackupInstanceSample.ts][backupinstancessyncbackupinstancesample]                                                           | Sync backup instance again in case of failure This action will retry last failed operation and will bring backup instance to valid state x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/SyncBackupInstance.json                                                                                       |
| [backupInstancesTriggerRehydrateSample.ts][backupinstancestriggerrehydratesample]                                                               | rehydrate recovery point for restore for a BackupInstance x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/TriggerRehydrate.json                                                                                                                                                                        |
| [backupInstancesTriggerRestoreSample.ts][backupinstancestriggerrestoresample]                                                                   | Triggers restore for a BackupInstance x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/TriggerRestore.json                                                                                                                                                                                              |
| [backupInstancesValidateForBackupSample.ts][backupinstancesvalidateforbackupsample]                                                             | Validate whether adhoc backup will be successful or not x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ValidateForBackup.json                                                                                                                                                                         |
| [backupInstancesValidateForRestoreSample.ts][backupinstancesvalidateforrestoresample]                                                           | Validates if Restore can be triggered for a DataSource x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ValidateRestore.json                                                                                                                                                                            |
| [backupPoliciesCreateOrUpdateSample.ts][backuppoliciescreateorupdatesample]                                                                     | Creates or Updates a backup policy belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/PolicyCRUD/CreateOrUpdateBackupPolicy.json                                                                                                                                                                       |
| [backupPoliciesDeleteSample.ts][backuppoliciesdeletesample]                                                                                     | Deletes a backup policy belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/PolicyCRUD/DeleteBackupPolicy.json                                                                                                                                                                                          |
| [backupPoliciesGetSample.ts][backuppoliciesgetsample]                                                                                           | Gets a backup policy belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/PolicyCRUD/GetBackupPolicy.json                                                                                                                                                                                                |
| [backupPoliciesListSample.ts][backuppolicieslistsample]                                                                                         | Returns list of backup policies belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/PolicyCRUD/ListBackupPolicy.json                                                                                                                                                                                    |
| [backupVaultOperationResultsGetSample.ts][backupvaultoperationresultsgetsample]                                                                 | x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/GetOperationResultPatch.json                                                                                                                                                                                                                                          |
| [backupVaultsCheckNameAvailabilitySample.ts][backupvaultschecknameavailabilitysample]                                                           | API to check for resource name availability x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/CheckBackupVaultsNameAvailability.json                                                                                                                                                                                    |
| [backupVaultsCreateOrUpdateSample.ts][backupvaultscreateorupdatesample]                                                                         | Creates or updates a BackupVault resource belonging to a resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/PutBackupVault.json                                                                                                                                                                          |
| [backupVaultsDeleteSample.ts][backupvaultsdeletesample]                                                                                         | Deletes a BackupVault resource from the resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/DeleteBackupVault.json                                                                                                                                                                                        |
| [backupVaultsGetInResourceGroupSample.ts][backupvaultsgetinresourcegroupsample]                                                                 | Returns resource collection belonging to a resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/GetBackupVaultsInResourceGroup.json                                                                                                                                                                        |
| [backupVaultsGetInSubscriptionSample.ts][backupvaultsgetinsubscriptionsample]                                                                   | Returns resource collection belonging to a subscription. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/GetBackupVaultsInSubscription.json                                                                                                                                                                           |
| [backupVaultsGetSample.ts][backupvaultsgetsample]                                                                                               | Returns a resource belonging to a resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/GetBackupVault.json                                                                                                                                                                                                 |
| [backupVaultsUpdateSample.ts][backupvaultsupdatesample]                                                                                         | Updates a BackupVault resource belonging to a resource group. For example, updating tags for a resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/PatchBackupVault.json                                                                                                                                        |
| [dataProtectionCheckFeatureSupportSample.ts][dataprotectioncheckfeaturesupportsample]                                                           | Validates if a feature is supported x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/CheckfeatureSupport.json                                                                                                                                                                                                                    |
| [dataProtectionOperationsListSample.ts][dataprotectionoperationslistsample]                                                                     | Returns the list of available operations. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/Operations/List.json                                                                                                                                                                                                                  |
| [deletedBackupInstancesGetSample.ts][deletedbackupinstancesgetsample]                                                                           | Gets a deleted backup instance with name in a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/DeletedBackupInstanceOperations/GetDeletedBackupInstance.json                                                                                                                                                        |
| [deletedBackupInstancesListSample.ts][deletedbackupinstanceslistsample]                                                                         | Gets deleted backup instances belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/DeletedBackupInstanceOperations/ListDeletedBackupInstances.json                                                                                                                                                       |
| [deletedBackupInstancesUndeleteSample.ts][deletedbackupinstancesundeletesample]                                                                 | x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/DeletedBackupInstanceOperations/UndeleteDeletedBackupInstance.json                                                                                                                                                                                                              |
| [dppResourceGuardProxyCreateOrUpdateSample.ts][dppresourceguardproxycreateorupdatesample]                                                       | Creates or Updates a ResourceGuardProxy x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardProxyCRUD/PutResourceGuardProxy.json                                                                                                                                                                                       |
| [dppResourceGuardProxyDeleteSample.ts][dppresourceguardproxydeletesample]                                                                       | Deletes the ResourceGuardProxy x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardProxyCRUD/DeleteResourceGuardProxy.json                                                                                                                                                                                             |
| [dppResourceGuardProxyGetSample.ts][dppresourceguardproxygetsample]                                                                             | Returns the ResourceGuardProxy object associated with the vault, and that matches the name in the request x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardProxyCRUD/GetResourceGuardProxy.json                                                                                                                     |
| [dppResourceGuardProxyListSample.ts][dppresourceguardproxylistsample]                                                                           | Returns the list of ResourceGuardProxies associated with the vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardProxyCRUD/ListResourceGuardProxy.json                                                                                                                                                           |
| [dppResourceGuardProxyUnlockDeleteSample.ts][dppresourceguardproxyunlockdeletesample]                                                           | UnlockDelete call for ResourceGuardProxy, executed before one can delete it x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardProxyCRUD/UnlockDeleteResourceGuardProxy.json                                                                                                                                          |
| [exportJobsOperationResultGetSample.ts][exportjobsoperationresultgetsample]                                                                     | Gets the operation result of operation triggered by Export Jobs API. If the operation is successful, then it also contains URL of a Blob and a SAS key to access the same. The blob contains exported jobs in JSON serialized format. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/JobCRUD/GetExportJobsOperationResult.json |
| [exportJobsTriggerSample.ts][exportjobstriggersample]                                                                                           | Triggers export of jobs and returns an OperationID to track. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/JobCRUD/TriggerExportJobs.json                                                                                                                                                                                     |
| [jobsGetSample.ts][jobsgetsample]                                                                                                               | Gets a job with id in a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/JobCRUD/GetJob.json                                                                                                                                                                                                                        |
| [jobsListSample.ts][jobslistsample]                                                                                                             | Returns list of jobs belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/JobCRUD/ListJobs.json                                                                                                                                                                                                          |
| [operationResultGetSample.ts][operationresultgetsample]                                                                                         | Gets the operation result for a resource x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/GetOperationResult.json                                                                                                                                                                                                                |
| [operationStatusBackupVaultContextGetSample.ts][operationstatusbackupvaultcontextgetsample]                                                     | Gets the operation status for an operation over a BackupVault's context. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/GetOperationStatusVaultContext.json                                                                                                                                                                    |
| [operationStatusGetSample.ts][operationstatusgetsample]                                                                                         | Gets the operation status for a resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/GetOperationStatus.json                                                                                                                                                                                                               |
| [operationStatusResourceGroupContextGetSample.ts][operationstatusresourcegroupcontextgetsample]                                                 | Gets the operation status for an operation over a ResourceGroup's context. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/GetOperationStatusRGContext.json                                                                                                                                                                     |
| [recoveryPointsGetSample.ts][recoverypointsgetsample]                                                                                           | Gets a Recovery Point using recoveryPointId for a Datasource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/GetRecoveryPoint.json                                                                                                                                                                    |
| [recoveryPointsListSample.ts][recoverypointslistsample]                                                                                         | Returns a list of Recovery Points for a DataSource in a vault. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ListRecoveryPoints.json                                                                                                                                                                 |
| [resourceGuardsDeleteSample.ts][resourceguardsdeletesample]                                                                                     | Deletes a ResourceGuard resource from the resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/DeleteResourceGuard.json                                                                                                                                                                            |
| [resourceGuardsGetBackupSecurityPinRequestsObjectsSample.ts][resourceguardsgetbackupsecuritypinrequestsobjectssample]                           | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListBackupSecurityPINRequests.json                                                                                                    |
| [resourceGuardsGetDefaultBackupSecurityPinRequestsObjectSample.ts][resourceguardsgetdefaultbackupsecuritypinrequestsobjectsample]               | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultBackupSecurityPINRequests.json                                                                                              |
| [resourceGuardsGetDefaultDeleteProtectedItemRequestsObjectSample.ts][resourceguardsgetdefaultdeleteprotecteditemrequestsobjectsample]           | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultDeleteProtectedItemRequests.json                                                                                            |
| [resourceGuardsGetDefaultDeleteResourceGuardProxyRequestsObjectSample.ts][resourceguardsgetdefaultdeleteresourceguardproxyrequestsobjectsample] | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultDeleteResourceGuardProxyRequests.json                                                                                       |
| [resourceGuardsGetDefaultDisableSoftDeleteRequestsObjectSample.ts][resourceguardsgetdefaultdisablesoftdeleterequestsobjectsample]               | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultDisableSoftDeleteRequests.json                                                                                              |
| [resourceGuardsGetDefaultUpdateProtectedItemRequestsObjectSample.ts][resourceguardsgetdefaultupdateprotecteditemrequestsobjectsample]           | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultUpdateProtectedItemRequests.json                                                                                            |
| [resourceGuardsGetDefaultUpdateProtectionPolicyRequestsObjectSample.ts][resourceguardsgetdefaultupdateprotectionpolicyrequestsobjectsample]     | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultUpdateProtectionPolicyRequests.json                                                                                         |
| [resourceGuardsGetDeleteProtectedItemRequestsObjectsSample.ts][resourceguardsgetdeleteprotecteditemrequestsobjectssample]                       | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListDeleteProtectedItemRequests.json                                                                                                  |
| [resourceGuardsGetDeleteResourceGuardProxyRequestsObjectsSample.ts][resourceguardsgetdeleteresourceguardproxyrequestsobjectssample]             | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListDeleteResourceGuardProxyRequests.json                                                                                             |
| [resourceGuardsGetDisableSoftDeleteRequestsObjectsSample.ts][resourceguardsgetdisablesoftdeleterequestsobjectssample]                           | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListDisableSoftDeleteRequests.json                                                                                                    |
| [resourceGuardsGetResourcesInResourceGroupSample.ts][resourceguardsgetresourcesinresourcegroupsample]                                           | Returns ResourceGuards collection belonging to a ResourceGroup. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetResourceGuardsInResourceGroup.json                                                                                                                                                         |
| [resourceGuardsGetResourcesInSubscriptionSample.ts][resourceguardsgetresourcesinsubscriptionsample]                                             | Returns ResourceGuards collection belonging to a subscription. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetResourceGuardsInSubscription.json                                                                                                                                                           |
| [resourceGuardsGetSample.ts][resourceguardsgetsample]                                                                                           | Returns a ResourceGuard belonging to a resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetResourceGuard.json                                                                                                                                                                                  |
| [resourceGuardsGetUpdateProtectedItemRequestsObjectsSample.ts][resourceguardsgetupdateprotecteditemrequestsobjectssample]                       | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListUpdateProtectedItemRequests.json                                                                                                  |
| [resourceGuardsGetUpdateProtectionPolicyRequestsObjectsSample.ts][resourceguardsgetupdateprotectionpolicyrequestsobjectssample]                 | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListUpdateProtectionPolicyRequests.json                                                                                               |
| [resourceGuardsPatchSample.ts][resourceguardspatchsample]                                                                                       | Updates a ResourceGuard resource belonging to a resource group. For example, updating tags for a resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/PatchResourceGuard.json                                                                                                                            |
| [resourceGuardsPutSample.ts][resourceguardsputsample]                                                                                           | Creates or updates a ResourceGuard resource belonging to a resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/PutResourceGuard.json                                                                                                                                                              |
| [restorableTimeRangesFindSample.ts][restorabletimerangesfindsample]                                                                             | x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/FindRestorableTimeRanges.json                                                                                                                                                                                                                          |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/backupInstancesAdhocBackupSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env DATAPROTECTION_SUBSCRIPTION_ID="<dataprotection subscription id>" DATAPROTECTION_RESOURCE_GROUP="<dataprotection resource group>" node dist/backupInstancesAdhocBackupSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[backupinstancesadhocbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesAdhocBackupSample.ts
[backupinstancescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesCreateOrUpdateSample.ts
[backupinstancesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesDeleteSample.ts
[backupinstancesgetbackupinstanceoperationresultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesGetBackupInstanceOperationResultSample.ts
[backupinstancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesGetSample.ts
[backupinstanceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesListSample.ts
[backupinstancesresumebackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesResumeBackupsSample.ts
[backupinstancesresumeprotectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesResumeProtectionSample.ts
[backupinstancesstopprotectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesStopProtectionSample.ts
[backupinstancessuspendbackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesSuspendBackupsSample.ts
[backupinstancessyncbackupinstancesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesSyncBackupInstanceSample.ts
[backupinstancestriggerrehydratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesTriggerRehydrateSample.ts
[backupinstancestriggerrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesTriggerRestoreSample.ts
[backupinstancesvalidateforbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesValidateForBackupSample.ts
[backupinstancesvalidateforrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupInstancesValidateForRestoreSample.ts
[backuppoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupPoliciesCreateOrUpdateSample.ts
[backuppoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupPoliciesDeleteSample.ts
[backuppoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupPoliciesGetSample.ts
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupPoliciesListSample.ts
[backupvaultoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupVaultOperationResultsGetSample.ts
[backupvaultschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupVaultsCheckNameAvailabilitySample.ts
[backupvaultscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupVaultsCreateOrUpdateSample.ts
[backupvaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupVaultsDeleteSample.ts
[backupvaultsgetinresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupVaultsGetInResourceGroupSample.ts
[backupvaultsgetinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupVaultsGetInSubscriptionSample.ts
[backupvaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupVaultsGetSample.ts
[backupvaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/backupVaultsUpdateSample.ts
[dataprotectioncheckfeaturesupportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/dataProtectionCheckFeatureSupportSample.ts
[dataprotectionoperationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/dataProtectionOperationsListSample.ts
[deletedbackupinstancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/deletedBackupInstancesGetSample.ts
[deletedbackupinstanceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/deletedBackupInstancesListSample.ts
[deletedbackupinstancesundeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/deletedBackupInstancesUndeleteSample.ts
[dppresourceguardproxycreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/dppResourceGuardProxyCreateOrUpdateSample.ts
[dppresourceguardproxydeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/dppResourceGuardProxyDeleteSample.ts
[dppresourceguardproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/dppResourceGuardProxyGetSample.ts
[dppresourceguardproxylistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/dppResourceGuardProxyListSample.ts
[dppresourceguardproxyunlockdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/dppResourceGuardProxyUnlockDeleteSample.ts
[exportjobsoperationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/exportJobsOperationResultGetSample.ts
[exportjobstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/exportJobsTriggerSample.ts
[jobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/jobsGetSample.ts
[jobslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/jobsListSample.ts
[operationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/operationResultGetSample.ts
[operationstatusbackupvaultcontextgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/operationStatusBackupVaultContextGetSample.ts
[operationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/operationStatusGetSample.ts
[operationstatusresourcegroupcontextgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/operationStatusResourceGroupContextGetSample.ts
[recoverypointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/recoveryPointsGetSample.ts
[recoverypointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/recoveryPointsListSample.ts
[resourceguardsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsDeleteSample.ts
[resourceguardsgetbackupsecuritypinrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetBackupSecurityPinRequestsObjectsSample.ts
[resourceguardsgetdefaultbackupsecuritypinrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetDefaultBackupSecurityPinRequestsObjectSample.ts
[resourceguardsgetdefaultdeleteprotecteditemrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetDefaultDeleteProtectedItemRequestsObjectSample.ts
[resourceguardsgetdefaultdeleteresourceguardproxyrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetDefaultDeleteResourceGuardProxyRequestsObjectSample.ts
[resourceguardsgetdefaultdisablesoftdeleterequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetDefaultDisableSoftDeleteRequestsObjectSample.ts
[resourceguardsgetdefaultupdateprotecteditemrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetDefaultUpdateProtectedItemRequestsObjectSample.ts
[resourceguardsgetdefaultupdateprotectionpolicyrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetDefaultUpdateProtectionPolicyRequestsObjectSample.ts
[resourceguardsgetdeleteprotecteditemrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetDeleteProtectedItemRequestsObjectsSample.ts
[resourceguardsgetdeleteresourceguardproxyrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetDeleteResourceGuardProxyRequestsObjectsSample.ts
[resourceguardsgetdisablesoftdeleterequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetDisableSoftDeleteRequestsObjectsSample.ts
[resourceguardsgetresourcesinresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetResourcesInResourceGroupSample.ts
[resourceguardsgetresourcesinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetResourcesInSubscriptionSample.ts
[resourceguardsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetSample.ts
[resourceguardsgetupdateprotecteditemrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetUpdateProtectedItemRequestsObjectsSample.ts
[resourceguardsgetupdateprotectionpolicyrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsGetUpdateProtectionPolicyRequestsObjectsSample.ts
[resourceguardspatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsPatchSample.ts
[resourceguardsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/resourceGuardsPutSample.ts
[restorabletimerangesfindsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/typescript/src/restorableTimeRangesFindSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-dataprotection?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/dataprotection/arm-dataprotection/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
