sdk/dataprotection/arm-dataprotection/samples/v4/typescript/README.md
# @azure/arm-dataprotection client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-dataprotection in some common scenarios.

| **File Name**                                                                                                                                   | **Description**                                                                                                                                                                                                                                                                                                |
| ----------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [backupInstancesAdhocBackupSample.ts][backupinstancesadhocbackupsample]                                                                         | trigger adhoc backup x-ms-original-file: 2025-07-01/BackupInstanceOperations/TriggerBackup.json                                                                                                                                                                                                                |
| [backupInstancesCreateOrUpdateSample.ts][backupinstancescreateorupdatesample]                                                                   | create or update a backup instance in a backup vault x-ms-original-file: 2025-07-01/BackupInstanceOperations/PutBackupInstance.json                                                                                                                                                                            |
| [backupInstancesDeleteSample.ts][backupinstancesdeletesample]                                                                                   | delete a backup instance in a backup vault x-ms-original-file: 2025-07-01/BackupInstanceOperations/DeleteBackupInstance.json                                                                                                                                                                                   |
| [backupInstancesExtensionRoutingListSample.ts][backupinstancesextensionroutinglistsample]                                                       | gets a list of backup instances associated with a tracked resource x-ms-original-file: 2025-07-01/BackupInstanceOperations/ListBackupInstancesExtensionRouting.json                                                                                                                                            |
| [backupInstancesGetBackupInstanceOperationResultSample.ts][backupinstancesgetbackupinstanceoperationresultsample]                               | get result of backup instance creation operation x-ms-original-file: 2025-07-01/BackupInstanceOperations/GetBackupInstanceOperationResult.json                                                                                                                                                                 |
| [backupInstancesGetSample.ts][backupinstancesgetsample]                                                                                         | gets a backup instance with name in a backup vault x-ms-original-file: 2025-07-01/BackupInstanceOperations/GetBackupInstance.json                                                                                                                                                                              |
| [backupInstancesListSample.ts][backupinstanceslistsample]                                                                                       | gets a backup instances belonging to a backup vault x-ms-original-file: 2025-07-01/BackupInstanceOperations/ListBackupInstances.json                                                                                                                                                                           |
| [backupInstancesResumeBackupsSample.ts][backupinstancesresumebackupssample]                                                                     | this operation will resume backups for backup instance x-ms-original-file: 2025-07-01/BackupInstanceOperations/ResumeBackups.json                                                                                                                                                                              |
| [backupInstancesResumeProtectionSample.ts][backupinstancesresumeprotectionsample]                                                               | this operation will resume protection for a stopped backup instance x-ms-original-file: 2025-07-01/BackupInstanceOperations/ResumeProtection.json                                                                                                                                                              |
| [backupInstancesStopProtectionSample.ts][backupinstancesstopprotectionsample]                                                                   | this operation will stop protection of a backup instance and data will be held forever x-ms-original-file: 2025-07-01/BackupInstanceOperations/StopProtection.json                                                                                                                                             |
| [backupInstancesSuspendBackupsSample.ts][backupinstancessuspendbackupssample]                                                                   | this operation will stop backup for a backup instance and retains the backup data as per the policy (except latest Recovery point, which will be retained forever) x-ms-original-file: 2025-07-01/BackupInstanceOperations/SuspendBackup_ResourceGuardEnabled.json                                             |
| [backupInstancesSyncBackupInstanceSample.ts][backupinstancessyncbackupinstancesample]                                                           | sync backup instance again in case of failure This action will retry last failed operation and will bring backup instance to valid state x-ms-original-file: 2025-07-01/BackupInstanceOperations/SyncBackupInstance.json                                                                                       |
| [backupInstancesTriggerCrossRegionRestoreSample.ts][backupinstancestriggercrossregionrestoresample]                                             | triggers Cross Region Restore for BackupInstance. x-ms-original-file: 2025-07-01/CrossRegionRestore/TriggerCrossRegionRestore.json                                                                                                                                                                             |
| [backupInstancesTriggerRehydrateSample.ts][backupinstancestriggerrehydratesample]                                                               | rehydrate recovery point for restore for a BackupInstance x-ms-original-file: 2025-07-01/BackupInstanceOperations/TriggerRehydrate.json                                                                                                                                                                        |
| [backupInstancesTriggerRestoreSample.ts][backupinstancestriggerrestoresample]                                                                   | triggers restore for a BackupInstance x-ms-original-file: 2025-07-01/BackupInstanceOperations/TriggerRestore.json                                                                                                                                                                                              |
| [backupInstancesValidateCrossRegionRestoreSample.ts][backupinstancesvalidatecrossregionrestoresample]                                           | validates whether Cross Region Restore can be triggered for DataSource. x-ms-original-file: 2025-07-01/CrossRegionRestore/ValidateCrossRegionRestore.json                                                                                                                                                      |
| [backupInstancesValidateForBackupSample.ts][backupinstancesvalidateforbackupsample]                                                             | validate whether adhoc backup will be successful or not x-ms-original-file: 2025-07-01/BackupInstanceOperations/ValidateForBackup.json                                                                                                                                                                         |
| [backupInstancesValidateForModifyBackupSample.ts][backupinstancesvalidateformodifybackupsample]                                                 | validate whether update for backup instance will be successful or not x-ms-original-file: 2025-07-01/BackupInstanceOperations/ValidateForModifyBackup.json                                                                                                                                                     |
| [backupInstancesValidateForRestoreSample.ts][backupinstancesvalidateforrestoresample]                                                           | validates if Restore can be triggered for a DataSource x-ms-original-file: 2025-07-01/BackupInstanceOperations/ValidateRestore.json                                                                                                                                                                            |
| [backupPoliciesCreateOrUpdateSample.ts][backuppoliciescreateorupdatesample]                                                                     | creates or Updates a backup policy belonging to a backup vault x-ms-original-file: 2025-07-01/PolicyCRUD/CreateOrUpdateBackupPolicy.json                                                                                                                                                                       |
| [backupPoliciesDeleteSample.ts][backuppoliciesdeletesample]                                                                                     | deletes a backup policy belonging to a backup vault x-ms-original-file: 2025-07-01/PolicyCRUD/DeleteBackupPolicy.json                                                                                                                                                                                          |
| [backupPoliciesGetSample.ts][backuppoliciesgetsample]                                                                                           | gets a backup policy belonging to a backup vault x-ms-original-file: 2025-07-01/PolicyCRUD/GetBackupPolicy.json                                                                                                                                                                                                |
| [backupPoliciesListSample.ts][backuppolicieslistsample]                                                                                         | returns list of backup policies belonging to a backup vault x-ms-original-file: 2025-07-01/PolicyCRUD/ListBackupPolicy.json                                                                                                                                                                                    |
| [backupVaultOperationResultsGetSample.ts][backupvaultoperationresultsgetsample]                                                                 | get a BackupVaultResource x-ms-original-file: 2025-07-01/VaultCRUD/GetOperationResultPatch.json                                                                                                                                                                                                                |
| [backupVaultsCheckNameAvailabilitySample.ts][backupvaultschecknameavailabilitysample]                                                           | aPI to check for resource name availability x-ms-original-file: 2025-07-01/VaultCRUD/CheckBackupVaultsNameAvailability.json                                                                                                                                                                                    |
| [backupVaultsCreateOrUpdateSample.ts][backupvaultscreateorupdatesample]                                                                         | creates or updates a BackupVault resource belonging to a resource group. x-ms-original-file: 2025-07-01/VaultCRUD/PutBackupVault.json                                                                                                                                                                          |
| [backupVaultsDeleteSample.ts][backupvaultsdeletesample]                                                                                         | deletes a BackupVault resource from the resource group. x-ms-original-file: 2025-07-01/VaultCRUD/DeleteBackupVault.json                                                                                                                                                                                        |
| [backupVaultsGetSample.ts][backupvaultsgetsample]                                                                                               | returns a resource belonging to a resource group. x-ms-original-file: 2025-07-01/VaultCRUD/GetBackupVault.json                                                                                                                                                                                                 |
| [backupVaultsListInResourceGroupSample.ts][backupvaultslistinresourcegroupsample]                                                               | returns resource collection belonging to a resource group. x-ms-original-file: 2025-07-01/VaultCRUD/GetBackupVaultsInResourceGroup.json                                                                                                                                                                        |
| [backupVaultsListInSubscriptionSample.ts][backupvaultslistinsubscriptionsample]                                                                 | returns resource collection belonging to a subscription. x-ms-original-file: 2025-07-01/VaultCRUD/GetBackupVaultsInSubscription.json                                                                                                                                                                           |
| [backupVaultsUpdateSample.ts][backupvaultsupdatesample]                                                                                         | updates a BackupVault resource belonging to a resource group. For example, updating tags for a resource. x-ms-original-file: 2025-07-01/VaultCRUD/PatchBackupVault.json                                                                                                                                        |
| [dataProtectionCheckFeatureSupportSample.ts][dataprotectioncheckfeaturesupportsample]                                                           | validates if a feature is supported x-ms-original-file: 2025-07-01/CheckfeatureSupport.json                                                                                                                                                                                                                    |
| [dataProtectionOperationsListSample.ts][dataprotectionoperationslistsample]                                                                     | list the operations for the provider x-ms-original-file: 2025-07-01/Operations/List.json                                                                                                                                                                                                                       |
| [deletedBackupInstancesGetSample.ts][deletedbackupinstancesgetsample]                                                                           | gets a deleted backup instance with name in a backup vault x-ms-original-file: 2025-07-01/DeletedBackupInstanceOperations/GetDeletedBackupInstance.json                                                                                                                                                        |
| [deletedBackupInstancesListSample.ts][deletedbackupinstanceslistsample]                                                                         | gets deleted backup instances belonging to a backup vault x-ms-original-file: 2025-07-01/DeletedBackupInstanceOperations/ListDeletedBackupInstances.json                                                                                                                                                       |
| [deletedBackupInstancesUndeleteSample.ts][deletedbackupinstancesundeletesample]                                                                 | a long-running resource action. x-ms-original-file: 2025-07-01/DeletedBackupInstanceOperations/UndeleteDeletedBackupInstance.json                                                                                                                                                                              |
| [dppResourceGuardProxyCreateOrUpdateSample.ts][dppresourceguardproxycreateorupdatesample]                                                       | creates or Updates a ResourceGuardProxy x-ms-original-file: 2025-07-01/ResourceGuardProxyCRUD/PutResourceGuardProxy.json                                                                                                                                                                                       |
| [dppResourceGuardProxyDeleteSample.ts][dppresourceguardproxydeletesample]                                                                       | deletes the ResourceGuardProxy x-ms-original-file: 2025-07-01/ResourceGuardProxyCRUD/DeleteResourceGuardProxy.json                                                                                                                                                                                             |
| [dppResourceGuardProxyGetSample.ts][dppresourceguardproxygetsample]                                                                             | returns the ResourceGuardProxy object associated with the vault, and that matches the name in the request x-ms-original-file: 2025-07-01/ResourceGuardProxyCRUD/GetResourceGuardProxy.json                                                                                                                     |
| [dppResourceGuardProxyListSample.ts][dppresourceguardproxylistsample]                                                                           | returns the list of ResourceGuardProxies associated with the vault x-ms-original-file: 2025-07-01/ResourceGuardProxyCRUD/ListResourceGuardProxy.json                                                                                                                                                           |
| [dppResourceGuardProxyUnlockDeleteSample.ts][dppresourceguardproxyunlockdeletesample]                                                           | unlockDelete call for ResourceGuardProxy, executed before one can delete it x-ms-original-file: 2025-07-01/ResourceGuardProxyCRUD/UnlockDeleteResourceGuardProxy.json                                                                                                                                          |
| [exportJobsOperationResultGetSample.ts][exportjobsoperationresultgetsample]                                                                     | gets the operation result of operation triggered by Export Jobs API. If the operation is successful, then it also contains URL of a Blob and a SAS key to access the same. The blob contains exported jobs in JSON serialized format. x-ms-original-file: 2025-07-01/JobCRUD/GetExportJobsOperationResult.json |
| [exportJobsTriggerSample.ts][exportjobstriggersample]                                                                                           | triggers export of jobs and returns an OperationID to track. x-ms-original-file: 2025-07-01/JobCRUD/TriggerExportJobs.json                                                                                                                                                                                     |
| [fetchCrossRegionRestoreJobGetSample.ts][fetchcrossregionrestorejobgetsample]                                                                   | fetches the Cross Region Restore Job x-ms-original-file: 2025-07-01/CrossRegionRestore/FetchCrossRegionRestoreJob.json                                                                                                                                                                                         |
| [fetchCrossRegionRestoreJobsListSample.ts][fetchcrossregionrestorejobslistsample]                                                               | fetches list of Cross Region Restore job belonging to the vault x-ms-original-file: 2025-07-01/CrossRegionRestore/FetchCrossRegionRestoreJobs.json                                                                                                                                                             |
| [fetchSecondaryRecoveryPointsListSample.ts][fetchsecondaryrecoverypointslistsample]                                                             | returns a list of Secondary Recovery Points for a DataSource in a vault, that can be used for Cross Region Restore. x-ms-original-file: 2025-07-01/CrossRegionRestore/FetchSecondaryRPs.json                                                                                                                   |
| [jobsGetSample.ts][jobsgetsample]                                                                                                               | gets a job with id in a backup vault x-ms-original-file: 2025-07-01/JobCRUD/GetJob.json                                                                                                                                                                                                                        |
| [jobsListSample.ts][jobslistsample]                                                                                                             | returns list of jobs belonging to a backup vault x-ms-original-file: 2025-07-01/JobCRUD/ListJobs.json                                                                                                                                                                                                          |
| [operationResultGetSample.ts][operationresultgetsample]                                                                                         | gets the operation result for a resource x-ms-original-file: 2025-07-01/GetOperationResult.json                                                                                                                                                                                                                |
| [operationStatusBackupVaultContextGetSample.ts][operationstatusbackupvaultcontextgetsample]                                                     | gets the operation status for an operation over a BackupVault's context. x-ms-original-file: 2025-07-01/GetOperationStatusVaultContext.json                                                                                                                                                                    |
| [operationStatusGetSample.ts][operationstatusgetsample]                                                                                         | gets the operation status for a resource. x-ms-original-file: 2025-07-01/GetOperationStatus.json                                                                                                                                                                                                               |
| [operationStatusResourceGroupContextGetSample.ts][operationstatusresourcegroupcontextgetsample]                                                 | gets the operation status for an operation over a ResourceGroup's context. x-ms-original-file: 2025-07-01/GetOperationStatusRGContext.json                                                                                                                                                                     |
| [recoveryPointsGetSample.ts][recoverypointsgetsample]                                                                                           | gets a Recovery Point using recoveryPointId for a Datasource. x-ms-original-file: 2025-07-01/BackupInstanceOperations/GetRecoveryPoint.json                                                                                                                                                                    |
| [recoveryPointsListSample.ts][recoverypointslistsample]                                                                                         | returns a list of Recovery Points for a DataSource in a vault. x-ms-original-file: 2025-07-01/BackupInstanceOperations/ListRecoveryPoints.json                                                                                                                                                                 |
| [resourceGuardsDeleteSample.ts][resourceguardsdeletesample]                                                                                     | deletes a ResourceGuard resource from the resource group. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/DeleteResourceGuard.json                                                                                                                                                                            |
| [resourceGuardsGetDefaultBackupSecurityPINRequestsObjectSample.ts][resourceguardsgetdefaultbackupsecuritypinrequestsobjectsample]               | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultBackupSecurityPINRequests.json                                                                                              |
| [resourceGuardsGetDefaultDeleteProtectedItemRequestsObjectSample.ts][resourceguardsgetdefaultdeleteprotecteditemrequestsobjectsample]           | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultDeleteProtectedItemRequests.json                                                                                            |
| [resourceGuardsGetDefaultDeleteResourceGuardProxyRequestsObjectSample.ts][resourceguardsgetdefaultdeleteresourceguardproxyrequestsobjectsample] | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultDeleteResourceGuardProxyRequests.json                                                                                       |
| [resourceGuardsGetDefaultDisableSoftDeleteRequestsObjectSample.ts][resourceguardsgetdefaultdisablesoftdeleterequestsobjectsample]               | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultDisableSoftDeleteRequests.json                                                                                              |
| [resourceGuardsGetDefaultUpdateProtectedItemRequestsObjectSample.ts][resourceguardsgetdefaultupdateprotecteditemrequestsobjectsample]           | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultUpdateProtectedItemRequests.json                                                                                            |
| [resourceGuardsGetDefaultUpdateProtectionPolicyRequestsObjectSample.ts][resourceguardsgetdefaultupdateprotectionpolicyrequestsobjectsample]     | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultUpdateProtectionPolicyRequests.json                                                                                         |
| [resourceGuardsGetSample.ts][resourceguardsgetsample]                                                                                           | returns a ResourceGuard belonging to a resource group. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetResourceGuard.json                                                                                                                                                                                  |
| [resourceGuardsListBackupSecurityPINRequestsObjectsSample.ts][resourceguardslistbackupsecuritypinrequestsobjectssample]                         | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListBackupSecurityPINRequests.json                                                                                                    |
| [resourceGuardsListDeleteProtectedItemRequestsObjectsSample.ts][resourceguardslistdeleteprotecteditemrequestsobjectssample]                     | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListDeleteProtectedItemRequests.json                                                                                                  |
| [resourceGuardsListDeleteResourceGuardProxyRequestsObjectsSample.ts][resourceguardslistdeleteresourceguardproxyrequestsobjectssample]           | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListDeleteResourceGuardProxyRequests.json                                                                                             |
| [resourceGuardsListDisableSoftDeleteRequestsObjectsSample.ts][resourceguardslistdisablesoftdeleterequestsobjectssample]                         | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListDisableSoftDeleteRequests.json                                                                                                    |
| [resourceGuardsListResourcesInResourceGroupSample.ts][resourceguardslistresourcesinresourcegroupsample]                                         | returns ResourceGuards collection belonging to a ResourceGroup. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetResourceGuardsInResourceGroup.json                                                                                                                                                         |
| [resourceGuardsListResourcesInSubscriptionSample.ts][resourceguardslistresourcesinsubscriptionsample]                                           | returns ResourceGuards collection belonging to a subscription. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetResourceGuardsInSubscription.json                                                                                                                                                           |
| [resourceGuardsListUpdateProtectedItemRequestsObjectsSample.ts][resourceguardslistupdateprotecteditemrequestsobjectssample]                     | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListUpdateProtectedItemRequests.json                                                                                                  |
| [resourceGuardsListUpdateProtectionPolicyRequestsObjectsSample.ts][resourceguardslistupdateprotectionpolicyrequestsobjectssample]               | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListUpdateProtectionPolicyRequests.json                                                                                               |
| [resourceGuardsPatchSample.ts][resourceguardspatchsample]                                                                                       | updates a ResourceGuard resource belonging to a resource group. For example, updating tags for a resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/PatchResourceGuard.json                                                                                                                            |
| [resourceGuardsPutSample.ts][resourceguardsputsample]                                                                                           | creates or updates a ResourceGuard resource belonging to a resource group. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/PutResourceGuard.json                                                                                                                                                              |
| [restorableTimeRangesFindSample.ts][restorabletimerangesfindsample]                                                                             | x-ms-original-file: 2025-07-01/BackupInstanceOperations/FindRestorableTimeRanges.json                                                                                                                                                                                                                          |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/backupInstancesAdhocBackupSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env  node dist/backupInstancesAdhocBackupSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[backupinstancesadhocbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesAdhocBackupSample.ts
[backupinstancescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesCreateOrUpdateSample.ts
[backupinstancesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesDeleteSample.ts
[backupinstancesextensionroutinglistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesExtensionRoutingListSample.ts
[backupinstancesgetbackupinstanceoperationresultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesGetBackupInstanceOperationResultSample.ts
[backupinstancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesGetSample.ts
[backupinstanceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesListSample.ts
[backupinstancesresumebackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesResumeBackupsSample.ts
[backupinstancesresumeprotectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesResumeProtectionSample.ts
[backupinstancesstopprotectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesStopProtectionSample.ts
[backupinstancessuspendbackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesSuspendBackupsSample.ts
[backupinstancessyncbackupinstancesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesSyncBackupInstanceSample.ts
[backupinstancestriggercrossregionrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesTriggerCrossRegionRestoreSample.ts
[backupinstancestriggerrehydratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesTriggerRehydrateSample.ts
[backupinstancestriggerrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesTriggerRestoreSample.ts
[backupinstancesvalidatecrossregionrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesValidateCrossRegionRestoreSample.ts
[backupinstancesvalidateforbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesValidateForBackupSample.ts
[backupinstancesvalidateformodifybackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesValidateForModifyBackupSample.ts
[backupinstancesvalidateforrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupInstancesValidateForRestoreSample.ts
[backuppoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupPoliciesCreateOrUpdateSample.ts
[backuppoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupPoliciesDeleteSample.ts
[backuppoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupPoliciesGetSample.ts
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupPoliciesListSample.ts
[backupvaultoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupVaultOperationResultsGetSample.ts
[backupvaultschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupVaultsCheckNameAvailabilitySample.ts
[backupvaultscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupVaultsCreateOrUpdateSample.ts
[backupvaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupVaultsDeleteSample.ts
[backupvaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupVaultsGetSample.ts
[backupvaultslistinresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupVaultsListInResourceGroupSample.ts
[backupvaultslistinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupVaultsListInSubscriptionSample.ts
[backupvaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/backupVaultsUpdateSample.ts
[dataprotectioncheckfeaturesupportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/dataProtectionCheckFeatureSupportSample.ts
[dataprotectionoperationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/dataProtectionOperationsListSample.ts
[deletedbackupinstancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/deletedBackupInstancesGetSample.ts
[deletedbackupinstanceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/deletedBackupInstancesListSample.ts
[deletedbackupinstancesundeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/deletedBackupInstancesUndeleteSample.ts
[dppresourceguardproxycreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/dppResourceGuardProxyCreateOrUpdateSample.ts
[dppresourceguardproxydeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/dppResourceGuardProxyDeleteSample.ts
[dppresourceguardproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/dppResourceGuardProxyGetSample.ts
[dppresourceguardproxylistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/dppResourceGuardProxyListSample.ts
[dppresourceguardproxyunlockdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/dppResourceGuardProxyUnlockDeleteSample.ts
[exportjobsoperationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/exportJobsOperationResultGetSample.ts
[exportjobstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/exportJobsTriggerSample.ts
[fetchcrossregionrestorejobgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/fetchCrossRegionRestoreJobGetSample.ts
[fetchcrossregionrestorejobslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/fetchCrossRegionRestoreJobsListSample.ts
[fetchsecondaryrecoverypointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/fetchSecondaryRecoveryPointsListSample.ts
[jobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/jobsGetSample.ts
[jobslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/jobsListSample.ts
[operationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/operationResultGetSample.ts
[operationstatusbackupvaultcontextgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/operationStatusBackupVaultContextGetSample.ts
[operationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/operationStatusGetSample.ts
[operationstatusresourcegroupcontextgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/operationStatusResourceGroupContextGetSample.ts
[recoverypointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/recoveryPointsGetSample.ts
[recoverypointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/recoveryPointsListSample.ts
[resourceguardsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsDeleteSample.ts
[resourceguardsgetdefaultbackupsecuritypinrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsGetDefaultBackupSecurityPINRequestsObjectSample.ts
[resourceguardsgetdefaultdeleteprotecteditemrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsGetDefaultDeleteProtectedItemRequestsObjectSample.ts
[resourceguardsgetdefaultdeleteresourceguardproxyrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsGetDefaultDeleteResourceGuardProxyRequestsObjectSample.ts
[resourceguardsgetdefaultdisablesoftdeleterequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsGetDefaultDisableSoftDeleteRequestsObjectSample.ts
[resourceguardsgetdefaultupdateprotecteditemrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsGetDefaultUpdateProtectedItemRequestsObjectSample.ts
[resourceguardsgetdefaultupdateprotectionpolicyrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsGetDefaultUpdateProtectionPolicyRequestsObjectSample.ts
[resourceguardsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsGetSample.ts
[resourceguardslistbackupsecuritypinrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsListBackupSecurityPINRequestsObjectsSample.ts
[resourceguardslistdeleteprotecteditemrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsListDeleteProtectedItemRequestsObjectsSample.ts
[resourceguardslistdeleteresourceguardproxyrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsListDeleteResourceGuardProxyRequestsObjectsSample.ts
[resourceguardslistdisablesoftdeleterequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsListDisableSoftDeleteRequestsObjectsSample.ts
[resourceguardslistresourcesinresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsListResourcesInResourceGroupSample.ts
[resourceguardslistresourcesinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsListResourcesInSubscriptionSample.ts
[resourceguardslistupdateprotecteditemrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsListUpdateProtectedItemRequestsObjectsSample.ts
[resourceguardslistupdateprotectionpolicyrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsListUpdateProtectionPolicyRequestsObjectsSample.ts
[resourceguardspatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsPatchSample.ts
[resourceguardsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/resourceGuardsPutSample.ts
[restorabletimerangesfindsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/typescript/src/restorableTimeRangesFindSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-dataprotection?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/dataprotection/arm-dataprotection/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
